--- a/Detail_/Book_Detail_Infor.xib
+++ b/Detail_/Book_Detail_Infor.xib
@@ -19,16 +19,16 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="---" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AzW-w8-hpq">
-                        <rect key="frame" x="10" y="12" width="291" height="23"/>
+                        <rect key="frame" x="10" y="12" width="291" height="24"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="jAP-xz-AI9"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                        <color key="textColor" red="0.1137254902" green="0.32156862749999998" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" text="---" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bn6-sh-vfo">
-                        <rect key="frame" x="10" y="42" width="291" height="22"/>
+                        <rect key="frame" x="10" y="43" width="291" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="16" id="e1y-jd-x1W"/>
                         </constraints>
@@ -139,11 +139,6 @@
             <point key="canvasLocation" x="52.898550724637687" y="88.392857142857139"/>
         </collectionViewCell>
     </objects>
-    <designables>
-        <designable name="mwM-R2-F1a">
-            <size key="intrinsicContentSize" width="150" height="26"/>
-        </designable>
-    </designables>
     <resources>
         <image name="GoldStarEmpty" width="53" height="51"/>
         <image name="GoldStarFilled" width="53" height="51"/>
