--- a/Account_/User_Infor_ViewController.xib
+++ b/Account_/User_Infor_ViewController.xib
@@ -26,6 +26,7 @@
                 <outlet property="logout_S" destination="lne-a1-ynl" id="ytn-Z2-8jr"/>
                 <outlet property="logout_S_S" destination="tgs-0Y-Z9u" id="IYO-pK-xSz"/>
                 <outlet property="name" destination="oQu-ie-Ps0" id="LrA-RR-7fq"/>
+                <outlet property="notiBtn" destination="OEt-HR-LFo" id="U9N-fM-BVS"/>
                 <outlet property="optionCell" destination="Cn9-3K-RHG" id="em0-7P-Tsa"/>
                 <outlet property="optionCell_S" destination="3GD-7v-5YQ" id="16p-DZ-QwQ"/>
                 <outlet property="optionCell_S_S" destination="WFI-fn-4Pz" id="qwR-Bn-QkP"/>
@@ -73,10 +74,10 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="54b-Og-pqe">
-                            <rect key="frame" x="60" y="13" width="200" height="38"/>
+                            <rect key="frame" x="60" y="13" width="168" height="38"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="BMt-d7-hd0">
-                                    <rect key="frame" x="167" y="6.5" width="25" height="25"/>
+                                    <rect key="frame" x="135" y="6.5" width="25" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="1va-Pw-LT4"/>
                                         <constraint firstAttribute="width" constant="25" id="H41-ab-ZdK"/>
@@ -96,7 +97,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Từ khóa tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ViO-dr-Mhe">
-                            <rect key="frame" x="68" y="15" width="155" height="34"/>
+                            <rect key="frame" x="68" y="15" width="123" height="34"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="34" id="xJZ-9I-trC"/>
                             </constraints>
@@ -107,7 +108,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fph-g8-pOc">
-                            <rect key="frame" x="268" y="10" width="44" height="44"/>
+                            <rect key="frame" x="236" y="10" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="eDX-nd-81W"/>
                                 <constraint firstAttribute="height" constant="44" id="yho-tf-uLg"/>
@@ -117,19 +118,30 @@
                                 <action selector="didPressBuy" destination="-1" eventType="touchUpInside" id="zkJ-wp-ofR"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OEt-HR-LFo">
+                            <rect key="frame" x="276" y="10" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="44" id="JXO-dU-9s1"/>
+                                <constraint firstAttribute="height" constant="44" id="WIb-VP-X4u"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="img_bell"/>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="64" id="4H1-8Z-wPf"/>
                         <constraint firstItem="54b-Og-pqe" firstAttribute="leading" secondItem="iIQ-RA-sZC" secondAttribute="trailing" constant="8" symbolic="YES" id="5Qy-E9-59v"/>
-                        <constraint firstAttribute="trailing" secondItem="Fph-g8-pOc" secondAttribute="trailing" constant="8" id="8Bg-4O-oO5"/>
+                        <constraint firstAttribute="trailing" secondItem="Fph-g8-pOc" secondAttribute="trailing" constant="40" id="8Bg-4O-oO5"/>
                         <constraint firstItem="Fph-g8-pOc" firstAttribute="leading" secondItem="ViO-dr-Mhe" secondAttribute="trailing" constant="45" id="BnM-2r-HfK"/>
                         <constraint firstItem="ViO-dr-Mhe" firstAttribute="leading" secondItem="iIQ-RA-sZC" secondAttribute="trailing" constant="16" id="Ght-4E-OIV"/>
                         <constraint firstItem="54b-Og-pqe" firstAttribute="top" secondItem="mhR-99-ajO" secondAttribute="top" constant="13" id="MgL-d4-5rg"/>
+                        <constraint firstAttribute="trailing" secondItem="OEt-HR-LFo" secondAttribute="trailing" id="Pr9-9b-4ij"/>
                         <constraint firstItem="iIQ-RA-sZC" firstAttribute="leading" secondItem="mhR-99-ajO" secondAttribute="leading" constant="8" id="V6D-z2-kqT"/>
                         <constraint firstItem="Fph-g8-pOc" firstAttribute="leading" secondItem="54b-Og-pqe" secondAttribute="trailing" constant="8" symbolic="YES" id="Vbb-p9-dYD"/>
                         <constraint firstItem="Fph-g8-pOc" firstAttribute="top" secondItem="mhR-99-ajO" secondAttribute="top" constant="10" id="fhl-rp-o7f"/>
                         <constraint firstItem="iIQ-RA-sZC" firstAttribute="top" secondItem="mhR-99-ajO" secondAttribute="top" constant="10" id="rhJ-rE-Hns"/>
+                        <constraint firstItem="OEt-HR-LFo" firstAttribute="top" secondItem="mhR-99-ajO" secondAttribute="top" constant="10" id="s8g-hw-oQX"/>
                         <constraint firstItem="ViO-dr-Mhe" firstAttribute="top" secondItem="mhR-99-ajO" secondAttribute="top" constant="15" id="syN-tT-MlL"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -780,6 +792,7 @@
         <image name="ico_glass" width="80" height="79.5"/>
         <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
+        <image name="img_bell" width="33" height="33"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
