--- a/Tabbar_/First_Tab_ViewController.xib
+++ b/Tabbar_/First_Tab_ViewController.xib
@@ -16,6 +16,7 @@
                 <outlet property="bg_top" destination="g5P-W0-jZw" id="AgT-nY-SR8"/>
                 <outlet property="buyBtn" destination="iSg-GY-BhK" id="wEl-aT-Ixg"/>
                 <outlet property="login_bg_height" destination="TdY-Ze-5ia" id="P9h-th-2B0"/>
+                <outlet property="notiBtn" destination="4Qv-TI-Oah" id="naU-2I-Gju"/>
                 <outlet property="searchBtn" destination="8oi-PT-8yx" id="sRS-eH-WZK"/>
                 <outlet property="searchView" destination="qCj-lZ-8Dn" id="6qc-eA-Kp8"/>
                 <outlet property="tableView" destination="JxR-HW-6v5" id="uBb-3h-age"/>
@@ -51,10 +52,10 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCW-7q-PNm">
-                            <rect key="frame" x="60" y="13" width="200" height="38"/>
+                            <rect key="frame" x="60" y="13" width="168" height="38"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="8oi-PT-8yx">
-                                    <rect key="frame" x="167" y="6.5" width="25" height="25"/>
+                                    <rect key="frame" x="135" y="6.5" width="25" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="25" id="QDZ-SF-aMx"/>
                                         <constraint firstAttribute="height" constant="25" id="kUT-wa-xwv"/>
@@ -74,7 +75,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Từ khóa tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qCj-lZ-8Dn">
-                            <rect key="frame" x="68" y="15" width="155" height="34"/>
+                            <rect key="frame" x="68" y="15" width="123" height="34"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="34" id="wA2-Ja-dZD"/>
                             </constraints>
@@ -85,7 +86,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSg-GY-BhK">
-                            <rect key="frame" x="268" y="10" width="44" height="44"/>
+                            <rect key="frame" x="236" y="10" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="Axh-6q-ZVa"/>
                                 <constraint firstAttribute="height" constant="44" id="uxI-kW-ltn"/>
@@ -95,18 +96,32 @@
                                 <action selector="didPressBuy" destination="-1" eventType="touchUpInside" id="JrZ-lc-OxL"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Qv-TI-Oah">
+                            <rect key="frame" x="276" y="10" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="7SF-Ht-iLF"/>
+                                <constraint firstAttribute="width" constant="44" id="pCz-Pn-8uE"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="img_bell"/>
+                            <connections>
+                                <action selector="didPressNoti" destination="-1" eventType="touchUpInside" id="yWB-Ki-wI2"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.11764705882352941" green="0.5725490196078431" blue="0.5490196078431373" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstAttribute="trailing" secondItem="4Qv-TI-Oah" secondAttribute="trailing" id="6To-X9-Z5s"/>
                         <constraint firstItem="qCj-lZ-8Dn" firstAttribute="leading" secondItem="aDz-qA-ppq" secondAttribute="trailing" constant="16" id="751-Xb-g4V"/>
                         <constraint firstItem="g5P-W0-jZw" firstAttribute="top" secondItem="kFS-mh-T3b" secondAttribute="top" id="8YJ-vw-rad"/>
                         <constraint firstAttribute="bottom" secondItem="g5P-W0-jZw" secondAttribute="bottom" id="8et-fo-gm7"/>
                         <constraint firstAttribute="trailing" secondItem="g5P-W0-jZw" secondAttribute="trailing" id="EVk-Ri-XAk"/>
                         <constraint firstItem="iSg-GY-BhK" firstAttribute="leading" secondItem="qCj-lZ-8Dn" secondAttribute="trailing" constant="45" id="R5s-66-i3Z"/>
-                        <constraint firstAttribute="trailing" secondItem="iSg-GY-BhK" secondAttribute="trailing" constant="8" id="RHl-gX-nP8"/>
+                        <constraint firstAttribute="trailing" secondItem="iSg-GY-BhK" secondAttribute="trailing" constant="40" id="RHl-gX-nP8"/>
                         <constraint firstItem="rCW-7q-PNm" firstAttribute="leading" secondItem="aDz-qA-ppq" secondAttribute="trailing" constant="8" symbolic="YES" id="VbI-IA-V8f"/>
                         <constraint firstItem="iSg-GY-BhK" firstAttribute="leading" secondItem="rCW-7q-PNm" secondAttribute="trailing" constant="8" symbolic="YES" id="XQg-OI-zZJ"/>
                         <constraint firstItem="qCj-lZ-8Dn" firstAttribute="top" secondItem="kFS-mh-T3b" secondAttribute="top" constant="15" id="c5l-uL-Hn0"/>
+                        <constraint firstItem="4Qv-TI-Oah" firstAttribute="top" secondItem="kFS-mh-T3b" secondAttribute="top" constant="10" id="dN6-yg-1YA"/>
                         <constraint firstItem="aDz-qA-ppq" firstAttribute="top" secondItem="kFS-mh-T3b" secondAttribute="top" constant="10" id="dfq-p0-Kv4"/>
                         <constraint firstItem="rCW-7q-PNm" firstAttribute="top" secondItem="kFS-mh-T3b" secondAttribute="top" constant="13" id="ees-9G-MBl"/>
                         <constraint firstItem="g5P-W0-jZw" firstAttribute="leading" secondItem="kFS-mh-T3b" secondAttribute="leading" id="jOR-nh-ivg"/>
@@ -158,6 +173,7 @@
         <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
+        <image name="img_bell" width="33" height="33"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
