--- a/Tabbar_/Third_Tab_New_ViewController.xib
+++ b/Tabbar_/Third_Tab_New_ViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Third_Tab_New_ViewController">
             <connections>
                 <outlet property="buyBtn" destination="QQn-G4-hll" id="v0u-t2-Q8g"/>
+                <outlet property="notiBtn" destination="F60-bS-YIf" id="iXU-ef-wKU"/>
                 <outlet property="searchBtn" destination="wJ9-Sk-oX3" id="iic-Tp-YOg"/>
                 <outlet property="searchView" destination="HSE-69-uW9" id="FIr-kk-IL9"/>
                 <outlet property="tableView" destination="Ynp-MN-O5t" id="xq3-2s-dXD"/>
@@ -39,7 +40,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQn-G4-hll">
-                            <rect key="frame" x="268" y="10" width="44" height="44"/>
+                            <rect key="frame" x="236" y="10" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="dLB-qS-jNV"/>
                                 <constraint firstAttribute="height" constant="44" id="j76-ke-Bjd"/>
@@ -50,10 +51,10 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4c-3n-YtP">
-                            <rect key="frame" x="60" y="13" width="200" height="38"/>
+                            <rect key="frame" x="60" y="13" width="168" height="38"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="wJ9-Sk-oX3">
-                                    <rect key="frame" x="167" y="6.5" width="25" height="25"/>
+                                    <rect key="frame" x="135" y="6.5" width="25" height="25"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="25" id="4u0-o1-dZz"/>
                                         <constraint firstAttribute="height" constant="25" id="SLi-l8-dyh"/>
@@ -73,7 +74,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Từ khóa tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HSE-69-uW9">
-                            <rect key="frame" x="68" y="15" width="155" height="34"/>
+                            <rect key="frame" x="68" y="15" width="123" height="34"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="34" id="77d-h6-Zjc"/>
                             </constraints>
@@ -83,6 +84,15 @@
                                 <outlet property="delegate" destination="-1" id="qnS-HV-TVq"/>
                             </connections>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F60-bS-YIf">
+                            <rect key="frame" x="276" y="10" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="TZe-Cr-BFb"/>
+                                <constraint firstAttribute="width" constant="44" id="hoi-G1-QHa"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="img_bell"/>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -90,11 +100,13 @@
                         <constraint firstItem="HSE-69-uW9" firstAttribute="leading" secondItem="4iL-pf-5qa" secondAttribute="trailing" constant="16" id="3z3-us-wWK"/>
                         <constraint firstItem="y4c-3n-YtP" firstAttribute="leading" secondItem="4iL-pf-5qa" secondAttribute="trailing" constant="8" symbolic="YES" id="45z-uf-Ntl"/>
                         <constraint firstItem="4iL-pf-5qa" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="10" id="Bfa-FI-cTE"/>
+                        <constraint firstItem="F60-bS-YIf" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="10" id="CUp-Oe-O8m"/>
                         <constraint firstItem="QQn-G4-hll" firstAttribute="leading" secondItem="HSE-69-uW9" secondAttribute="trailing" constant="45" id="MtH-2o-XA8"/>
                         <constraint firstItem="QQn-G4-hll" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="10" id="O8M-Si-MD1"/>
+                        <constraint firstAttribute="trailing" secondItem="F60-bS-YIf" secondAttribute="trailing" id="W8O-eD-z3x"/>
                         <constraint firstAttribute="height" constant="64" id="X0d-S0-OfQ"/>
                         <constraint firstItem="y4c-3n-YtP" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="13" id="nZz-rY-rIr"/>
-                        <constraint firstAttribute="trailing" secondItem="QQn-G4-hll" secondAttribute="trailing" constant="8" id="qck-mi-zIt"/>
+                        <constraint firstAttribute="trailing" secondItem="QQn-G4-hll" secondAttribute="trailing" constant="40" id="qck-mi-zIt"/>
                         <constraint firstItem="HSE-69-uW9" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="15" id="sMK-dF-mHu"/>
                         <constraint firstItem="QQn-G4-hll" firstAttribute="leading" secondItem="y4c-3n-YtP" secondAttribute="trailing" constant="8" symbolic="YES" id="ud4-vf-sT3"/>
                     </constraints>
@@ -141,6 +153,7 @@
         <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
+        <image name="img_bell" width="33" height="33"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
