--- a/Account_/User_Infor_ViewController.xib
+++ b/Account_/User_Infor_ViewController.xib
@@ -126,6 +126,9 @@
                             </constraints>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="img_bell"/>
+                            <connections>
+                                <action selector="didPressNoti" destination="-1" eventType="touchUpInside" id="hd0-gJ-Rus"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
